<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="#f0eebe">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="#f0eebe"
            android:gravity="top"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iconanonimo"
                android:layout_width="130dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/iconanonimo"
                app:srcCompat="@drawable/icon_anonimo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="#f0eebe"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txttitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/titlepost"
                android:fontFamily="@font/allerta"
                android:gravity="center_vertical"
                android:text="@string/titlepost"
                android:textColor="#554236"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/txtuser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/user"
                android:fontFamily="@font/allerta"
                android:text="@string/user"
                android:textColor="#947460"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtudesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc"
                android:fontFamily="@font/allerta"
                android:text="@string/desc"
                android:textColor="#554236"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="4"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btninteresse"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/btninteresse"
                    app:srcCompat="@drawable/icon_interesse" />

                <ImageView
                    android:id="@+id/btncomments"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/btncomments"
                    app:srcCompat="@drawable/icon_comentar" />

                <ImageView
                    android:id="@+id/btnshare"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/btnshare"
                    app:srcCompat="@drawable/icon_share" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="4"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>