<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="#554236"
    tools:context=".TelaLogin">


    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="575dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#554236">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp" />

        <ImageView
            android:id="@+id/barrinha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/barrinha"
            app:srcCompat="@drawable/barrinha" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="219dp"
            android:layout_height="197dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:contentDescription="@string/logo"
            android:src="@drawable/logosmall" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp" />

        <EditText
            android:id="@+id/boxlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/textbox"
            android:ems="10"
            android:fontFamily="@font/allerta"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textAlignment="center"
            android:textColor="#6e5647" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp" />

        <EditText
            android:id="@+id/boxpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/textbox"
            android:ems="10"
            android:fontFamily="@font/allerta"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textAlignment="center"
            android:textColor="#6e5647" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp" />

        <Button
            android:id="@+id/btnentrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/buttoncustom"
            android:fontFamily="@font/allerta"
            android:text="@string/btnlogar"
            android:textAllCaps="true"
            android:textColor="#ffcfb0" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp" />

        <Button
            android:id="@+id/btnregistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/buttoncustomnew"
            android:fontFamily="@font/allerta"
            android:text="@string/btnregister"
            android:textAllCaps="true"
            android:textColor="#ffffff" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>