<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="575dp"
        android:background="#554236"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp" />

        <ImageView
            android:id="@+id/barrinha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/barrinha"
            app:srcCompat="@drawable/barrinha" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#554236">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#554236"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iconcadastro"
                    android:layout_width="match_parent"
                    android:layout_height="153dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:contentDescription="@string/iconcadastro"
                    app:srcCompat="@drawable/icon_cadastro" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp" />

                <EditText
                    android:id="@+id/boxname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/textbox"
                    android:ems="10"
                    android:fontFamily="@font/allerta"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:padding="12dp"
                    android:textAlignment="center"
                    android:textColor="#6e5647" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp" />

                <EditText
                    android:id="@+id/boxlogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/textbox"
                    android:ems="10"
                    android:fontFamily="@font/allerta"
                    android:hint="@string/login"
                    android:inputType="textPersonName"
                    android:padding="12dp"
                    android:textAlignment="center"
                    android:textColor="#6e5647" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp" />

                <EditText
                    android:id="@+id/boxpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/textbox"
                    android:ems="10"
                    android:fontFamily="@font/allerta"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:textAlignment="center"
                    android:textColor="#6e5647" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp" />

                <EditText
                    android:id="@+id/boxpasswordconfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/textbox"
                    android:ems="10"
                    android:fontFamily="@font/allerta"
                    android:hint="@string/confirmpassword"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:textAlignment="center"
                    android:textColor="#6e5647" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp" />

                <EditText
                    android:id="@+id/boxemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/textbox"
                    android:ems="10"
                    android:fontFamily="@font/allerta"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:textAlignment="center"
                    android:textColor="#6e5647" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp" />

                <EditText
                    android:id="@+id/boxtel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/textbox"
                    android:ems="10"
                    android:fontFamily="@font/allerta"
                    android:hint="@string/tel"
                    android:inputType="phone"
                    android:padding="12dp"
                    android:textAlignment="center"
                    android:textColor="#6e5647" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp" />

                <Button
                    android:id="@+id/btnsave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttoncustomnew"
                    android:fontFamily="@font/allerta"
                    android:text="@string/btnsave"
                    android:textAllCaps="true"
                    android:textColor="#ffffff" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp" />

                <Button
                    android:id="@+id/btnexcluir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttoncustom"
                    android:fontFamily="@font/allerta"
                    android:text="@string/btndelete"
                    android:textAllCaps="true"
                    android:textColor="#ffcfb0" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp" />

                <Button
                    android:id="@+id/btncancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttoncustomblue"
                    android:fontFamily="@font/allerta"
                    android:text="@string/btncancel"
                    android:textAllCaps="true"
                    android:textColor="#ffffff" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>